# src/server/Generated/Viewer/lib/Model/ReleaseFormatValue.php
@@ -1,17 +1,17 @@
 <?php
 /**
- * MediumFormatValue
+ * ReleaseFormatValue
  *
  * PHP version 8.1
  *
  * @category Class
- * @package  OpenAPI\Admin\Client
+ * @package  OpenAPI\Viewer\Client
  * @author   OpenAPI Generator team
  * @link     https://openapi-generator.tech
  */
 
 /**
- * ヰ世界観測所 管理画面向け API
+ * ヰ世界観測所 API
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
@@ -26,19 +26,19 @@
  * Do not edit the class manually.
  */
 
-namespace OpenAPI\Admin\Client\Model;
-use \OpenAPI\Admin\Client\ObjectSerializer;
+namespace OpenAPI\Viewer\Client\Model;
+use \OpenAPI\Viewer\Client\ObjectSerializer;
 
 /**
- * MediumFormatValue Class Doc Comment
+ * ReleaseFormatValue Class Doc Comment
  *
  * @category Class
- * @description 媒体種別
- * @package  OpenAPI\Admin\Client
+ * @description 提供形態の値
+ * @package  OpenAPI\Viewer\Client
  * @author   OpenAPI Generator team
  * @link     https://openapi-generator.tech
  */
-enum MediumFormatValue: int
+enum ReleaseFormatValue: int
 {
     /**
      * Possible values of this enum
