# src/server/packages/Release/Application/Admin/UseCase/Update/UpdateInputData.php
@@ -5,11 +5,12 @@ declare(strict_types=1);
 namespace Release\Application\Admin\UseCase\Update;
 
 /**
- * @phpstan-type MediumInput array{position: int, formatValue: int, tracks: list<array{songId: ?string, title: ?string, trackNo: int}>}
+ * @phpstan-type MediumInput array{position: int, name: ?string, tracks: list<array{songId: ?string, title: ?string, trackNo: int}>}
  */
 readonly class UpdateInputData
 {
     /**
+     * @param list<int>         $formatValues
      * @param list<MediumInput> $media
      */
     public function __construct(
@@ -20,6 +21,7 @@ readonly class UpdateInputData
         public ?string $jacketArtUrl,
         public bool $isDisplay,
         public int $orderNo,
+        public array $formatValues,
         public array $media,
     ) {
     }
